5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4345/executions/1577_1334.log
== TEST (2019-03-19 18:47:01) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",10-2 ...)

print("Multiplicacao: ",2*4 ...)

print("Divisao: ",16/2 ...)

print("Resto: ",88/10 ...)

print("Potenciacao: ",2**3 ...)
-- ERROR:
File "XXXX", line 3
    print("Subtracao: ",10-2 ...)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:47:56) 
-- CODE:
print( 5 + 3)

print(10-2 ...)

print(,2*4 ...)

print(16/2 ...)

print(88/10 ...)

print(2**3 ...)
-- ERROR:
File "XXXX", line 3
    print(10-2 ...)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:48:10) 
-- CODE:
print( 5 + 3)

print(10-2 ...)

print(2*4 ...)

print(16/2 ...)

print(88/10 ...)

print(2**3 ...)
-- ERROR:
File "XXXX", line 3
    print(10-2 ...)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:48:32) 
-- CODE:
print(5 + 3)

print(10-2 )

print(2*4 )

print(16/2)

print(88/10)

print(2**3)
-- OUTPUT:
8
8
8
8.0
8.8
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:48:37) 
-- CODE:
print(5 + 3)

print(10-2 )

print(2*4 )

print(16/2)

print(88/10)

print(2**3)
-- EXECUTION TIME:
0.173879
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
8
8
8
8.0
8.8
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:48:52) 
-- CODE:
print(5 + 3)

print(10-2 )

print(2*4 )

print(16/2)

print(88/10)

print(2**3)
-- OUTPUT:
8
8
8
8.0
8.8
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:50:07) 
-- CODE:
print(5 + 3)

print(10-2 )

print(2*4 )

print(16/2)

print(88%10)

print(2**3)
-- OUTPUT:
8
8
8
8.0
8
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:50:18) 
-- CODE:
print(5 + 3)

print(10-2 )

print(2*4 )

print(16/2)

print(88%10)

print(2**3)
-- EXECUTION TIME:
0.144176
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
8
8
8
8.0
8
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:52:24) 
-- CODE:
print( adicao:5 + 3)

print(subtracao:10-2 )

print(multiplicacao:2*4 )

print(divisao:16/2)

print(resto:88%10)

print(potenciacao:2**3)
-- ERROR:
File "XXXX", line 1
    print( adicao:5 + 3)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:52:35) 
-- CODE:
print(adicao:5 + 3)

print(subtracao:10-2 )

print(multiplicacao:2*4 )

print(divisao:16/2)

print(resto:88%10)

print(potenciacao:2**3)
-- ERROR:
File "XXXX", line 1
    print(adicao:5 + 3)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:53:36) 
-- CODE:
print(*adicao*:5 + 3)

print(*subtracao*:10-2 )

print(*multiplicacao*:2*4 )

print(*divisao*:16/2)

print(*resto*:88%10)

print(*potenciacao*:2**3)
-- ERROR:
File "XXXX", line 1
    print(*adicao*:5 + 3)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:53:41) 
-- CODE:
print(*adicao*:5 + 3)

print(*subtracao*:10-2 )

print(*multiplicacao*:2*4 )

print(*divisao*:16/2)

print(*resto*:88%10)

print(*potenciacao*:2**3)
-- EXECUTION TIME:
0.171235
-- ERROR:
  File "/home/codebench/codes/1577/1334/main.py", line 1
    print(*adicao*:5 + 3)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:53:54) 
-- CODE:
print(*adicao*:5+3)

print(*subtracao*:10-2 )

print(*multiplicacao*:2*4 )

print(*divisao*:16/2)

print(*resto*:88%10)

print(*potenciacao*:2**3)
-- ERROR:
File "XXXX", line 1
    print(*adicao*:5+3)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:56:02) 
-- CODE:
print("adicao":5+3)

print("subtracao":10-2 )

print("multiplicacao":2*4 )

print("divisao":16/2)

print("divisao":88%10)

print("potenciacao":2**3)
-- ERROR:
File "XXXX", line 1
    print("adicao":5+3)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:56:41) 
-- CODE:
print("adicao":5+3)
print("subtracao":10-2 )
print("multiplicacao":2*4 )
print("divisao":16/2)
print("divisao":88%10)
print("potenciacao":2**3)
-- ERROR:
File "XXXX", line 1
    print("adicao":5+3)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:57:43) 
-- CODE:
print("adicao:"5+3)
print("subtracao:"10-2 )
print("multiplicacao:"2*4 )
print("divisao:"16/2)
print("divisao:"88%10)
print("potenciacao:"2**3)
-- ERROR:
File "XXXX", line 1
    print("adicao:"5+3)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:58:39) 
-- CODE:
print("Adicao:"5+3)
print("Subtracao:"10-2 )
print("Sultiplicacao:"2*4 )
print("Divisao:"16/2)
print("Resto:"88%10)
print("Potenciacao:"2**3)
-- ERROR:
File "XXXX", line 1
    print("Adicao:"5+3)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:58:51) 
-- CODE:
print("Adicao:"5+3)
print("Subtracao:"10-2 )
print("Sultiplicacao:"2*4 )
print("Divisao:"16/2)
print("Resto:"88%10)
print("Potenciacao:"2**3)
-- EXECUTION TIME:
0.204327
-- ERROR:
  File "/home/codebench/codes/1577/1334/main.py", line 1
    print("Adicao:"5+3)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:59:45) 
-- CODE:
print("Adicao:" 5+3)
print("Subtracao:" 10-2 )
print("Sultiplicacao:" 2*4 )
print("Divisao:" 16/2)
print("Resto:" 88%10)
print("Potenciacao:" 2**3)
-- ERROR:
File "XXXX", line 1
    print("Adicao:" 5+3)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:59:49) 
-- CODE:
print("Adicao:" 5+3)
print("Subtracao:" 10-2 )
print("Sultiplicacao:" 2*4 )
print("Divisao:" 16/2)
print("Resto:" 88%10)
print("Potenciacao:" 2**3)
-- EXECUTION TIME:
0.141902
-- ERROR:
  File "/home/codebench/codes/1577/1334/main.py", line 1
    print("Adicao:" 5+3)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:59:58) 
-- CODE:
print("Adicao:" 5+3 )
print("Subtracao:" 10-2 )
print("Sultiplicacao:" 2*4 )
print("Divisao:" 16/2)
print("Resto:" 88%10)
print("Potenciacao:" 2**3)
-- ERROR:
File "XXXX", line 1
    print("Adicao:" 5+3 )
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:00:31) 
-- CODE:
print("Adicao:" 5+3 )
print("Subtracao:" 10-2 )
print("Sultiplicacao:" 2*4 )
print("Divisao:" 16/2)
print("Resto:" 88//10)
print("Potenciacao:" 2**3)
-- ERROR:
File "XXXX", line 1
    print("Adicao:" 5+3 )
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:01:11) 
-- CODE:
print("Adicao:" 5+3 )
print("Subtracao:" 10-2 )
print("Sultiplicacao:" 2*4 )
print("Divisao:" 16/2)
print("Resto:" 88//10)
print("Potenciacao:" 2**3)
-- ERROR:
File "XXXX", line 1
    print("Adicao:" 5+3 )
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:01:35) 
-- CODE:
print("Adicao:" 5+3)
print("Subtracao:" 10-2 )
print("Sultiplicacao:" 2*4 )
print("Divisao:" 16/2)
print("Resto:" 88//10)
print("Potenciacao:" 2**3)
-- ERROR:
File "XXXX", line 1
    print("Adicao:" 5+3)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:02:21) 
-- CODE:
print(*adicao*:5 + 3)

print(*subtracao*:10-2 )

print(*multiplicacao:2*4 )

print(divisao:16/2)

print(resto:88%10)

print(potenciacao:2**3)
-- ERROR:
File "XXXX", line 1
    print(*adicao*:5 + 3)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:02:46) 
-- CODE:
print("adicao":5 + 3)

print(*subtracao*:10-2 )

print(*multiplicacao:2*4 )

print(divisao:16/2)

print(resto:88%10)

print(potenciacao:2**3)
-- ERROR:
File "XXXX", line 1
    print("adicao":5 + 3)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:02:56) 
-- CODE:
print("Adicao":5 + 3)

print(*subtracao*:10-2 )

print(*multiplicacao:2*4 )

print(divisao:16/2)

print(resto:88%10)

print(potenciacao:2**3)
-- ERROR:
File "XXXX", line 1
    print("Adicao":5 + 3)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:03:24) 
-- CODE:
print(*adicao*:5 + 3)

print(*subtracao*:10-2 )

print(*multiplicacao:2*4 )

print(divisao:16/2)

print(resto:88%10)

print(potenciacao:2**3)
-- ERROR:
File "XXXX", line 1
    print(*adicao*:5 + 3)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:03:38) 
-- CODE:
print(*adicao*: 5 + 3)

print(*subtracao*:10-2 )

print(*multiplicacao:2*4 )

print(divisao:16/2)

print(resto:88%10)

print(potenciacao:2**3)
-- ERROR:
File "XXXX", line 1
    print(*adicao*: 5 + 3)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:03:56) 
-- CODE:
print("adicao": 5 + 3)

print(*subtracao*:10-2 )

print(*multiplicacao:2*4 )

print(divisao:16/2)

print(resto:88%10)

print(potenciacao:2**3)
-- ERROR:
File "XXXX", line 1
    print("adicao": 5 + 3)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:04:07) 
-- CODE:
print("adicao" 5 + 3)

print(*subtracao*:10-2 )

print(*multiplicacao:2*4 )

print(divisao:16/2)

print(resto:88%10)

print(potenciacao:2**3)
-- ERROR:
File "XXXX", line 1
    print("adicao" 5 + 3)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:05:29) 
-- CODE:
print("adicao: 5 + 3")

print(*subtracao*:10-2 )

print(*multiplicacao:2*4 )

print(divisao:16/2)

print(resto:88%10)

print(potenciacao:2**3)
-- ERROR:
File "XXXX", line 3
    print(*subtracao*:10-2 )
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:06:50) 
-- CODE:
print("adicao: 5 + 3")

print("subtracao:10-2" )

print("multiplicacao:2*4" )

print("divisao:16/2")

print("resto:88//10)

print("potenciacao:2**3")
-- ERROR:
File "XXXX", line 9
    print("resto:88//10)
                       ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:07:12) 
-- CODE:
print("adicao: 5 + 3")

print("subtracao:10-2" )

print("multiplicacao:2*4" )

print("divisao:16/2")

print("resto:88//10")

print("potenciacao:2**3")
-- OUTPUT:
adicao: 5 + 3
subtracao:10-2
multiplicacao:2*4
divisao:16/2
resto:88//10
potenciacao:2**3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:07:33) 
-- CODE:
print("adicao: 5 + 3")

print("subtracao:10-2" )

print("multiplicacao:2*4" )

print("divisao:16/2")

print("resto:88//10")

print("potenciacao:2**3")
-- EXECUTION TIME:
0.197231
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
adicao: 5 + 3
subtracao:10-2
multiplicacao:2*4
divisao:16/2
resto:88//10
potenciacao:2**3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:07:41) 
-- CODE:
print("adicao: 5 + 3")

print("subtracao:10-2" )

print("multiplicacao:2*4" )

print("divisao:16/2")

print("resto:88//10")

print("potenciacao:2**3")
-- OUTPUT:
adicao: 5 + 3
subtracao:10-2
multiplicacao:2*4
divisao:16/2
resto:88//10
potenciacao:2**3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:08:47) 
-- CODE:
print(adicao: 5 + 3)

print(subtracao:10-2)

print(multiplicacao:2*4)

print(divisao:16/2)

print(resto:88//10)

print(potenciacao:2**3)
-- ERROR:
File "XXXX", line 1
    print(adicao: 5 + 3)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:12:24) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", :10-2)

print("Multiplicacao: ", :2*4)

print("Divisao:", 16/2)

print("Resto:", 88//10)

print("Potenciacao:", 2**3)
-- ERROR:
File "XXXX", line 3
    print("Subtracao: ", :10-2)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:12:36) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", :2*4)

print("Divisao:", 16/2)

print("Resto:", 88//10)

print("Potenciacao:", 2**3)
-- ERROR:
File "XXXX", line 5
    print("Multiplicacao: ", :2*4)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:12:44) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao:", 16/2)

print("Resto:", 88//10)

print("Potenciacao:", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao: 8.0
Resto: 8
Potenciacao: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:12:50) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao:", 16/2)

print("Resto:", 88//10)

print("Potenciacao:", 2**3)
-- EXECUTION TIME:
0.13283
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao: 8.0
Resto: 8
Potenciacao: 8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
